--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
-		"deploy": "vite build && gh-pages -d dist"
+		"deploy": "gh-pages -d dist",
+		"homepage": "https://Develompen.github.io/lost-and-found/"
 	},
 	"dependencies": {
 		"@splidejs/react-splide": "^0.7.12",
